@@ -33,6 +33,8 @@ Sigla:
 + Added Danish translation for admin and file manager. Thanks Kenan.
 + Added Croatian translation for admin and file manager. Thanks jackie.
 
+- Fixed some SQLite related problems in the comment plugin
+- Fixed some i18n issues - issue 158
 - Fixed default_tab setting causing endless redirect - issue 106
 - Fixed issue with 'title' attribute in link(). Removed auto-generation of attribute for accessibility purposes. - issue 154
 - Fixed issue with Comment plugin where leave off http:// in website link would cause malformed url - issue 151
@@ -55,6 +57,8 @@ Sigla:
 - Fixed admin CSS so that foreground colours are declared - issue 137
 - Fixed MOD_REWRITE test which produced double slashes - issue 150
 
+. Improved default 404 message for useability. - issue 163
+. Updated chinese translation - thanks westup
 . Updated comment plugin to make use of statistics_api plugin if available and enabled.
 . Restricted access to backend to roles administrator, developer and editor - issue 122
 . Updated readme.txt with requirements detail for MySQL server.
